# r-agent

./: .gitignore  Cargo.toml  README.md
my_lib/src/api/: agents.rs
src/: args.rs
src/cmd/: ascii.rs  init.rs  mod.rs  run.rs
src/core/: config.rs  data.rs  mod.rs  runner.rs  session.rs  tools.rs
